--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "lottie-react-native": "^3.3.2",
     "react": "16.11.0",
     "react-native": "^0.62.0",
     "react-native-cli": "^2.0.1"
